--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "raylib.h": "c",
         "cstring": "c",
-        "xstring": "c"
+        "xstring": "c",
+        "stdint.h": "c"
     }
 }
